# TMobile

qod_python_sdk/: .manifest.json  README.md  install.cmd  install.sh  pyproject.toml
qod_python_sdk/documentation/models/: ApplicationServer.md  CreateSession.md  Device.md  DeviceIpv4Addr.md  Message.md  PortsSpec.md  QosStatus.md  SessionInfo.md
qod_python_sdk/documentation/services/: SessionService.md
qod_python_sdk/examples/: install.cmd  install.sh  sample.py
qod_python_sdk/src/tmode_qod/: __init__.py  sdk.py
qod_python_sdk/src/tmode_qod/hooks/: hook.py
qod_python_sdk/src/tmode_qod/models/: __init__.py  application_server.py  create_session.py  device.py  device_ipv4_addr.py  message.py  ports_spec.py  qos_status.py  session_info.py
qod_python_sdk/src/tmode_qod/net/environment/: environment.py
qod_python_sdk/src/tmode_qod/services/: session.py
qod_python_sdk/src/tmode_qod/services/utils/: base_service.py
